added npm start script. adding bottom margin so form doesn't fill up whole page filled out README

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simple registration form",
   "main": "src/app.js",
   "scripts": {
-    "start": "http-server -a localhost -p 8000 -c-1 ./src",
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "start": "./node_modules/.bin/http-server -a localhost -p 8000 -c-1 ./src",
     "test": "karma start karma.conf.js"
   },
   "author": "Sam Rae",
